--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "aws s3 sync ./build s3://soon-sample-deploy --profile=sample-deploy-s3"
+    "deploy": "aws s3 sync ./build s3://soon-sample-deploy --profile=sample-deploy-s3",
+    "invalidate": "aws cloudfront create-invalidation --profile=sample-deploy-s3 --distribution-id EZNLLH10RD0Q1 --paths / /index.html /error.html /service-worker.js /manifest.json /favicon.ico"
   },
   "eslintConfig": {
     "extends": [
