--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,11 @@ jobs:
   # Job 이름으로 , build라는 이름으로 Job이 표시된다.
   build:
     # Runner가 실행되는 환경을 정의하는 부분이다.
+    # github actions 의 컨테이너 이미지 OS 설정 시 Ubuntu 20.04 를 사용할 경우, 
+    # aws cli v2를 사용할 수 있고 
+    # Ubuntu 18.04 이하의 디스트로에서는 aws cli v1을 사용한다. 
+    # 그 이유는 공식 레포의 스크립트를 참고하면 확인할 수 있다. 
+    # (https://github.com/actions/virtual-environments/blob/main/images/linux/scripts/installers/aws.sh)
     runs-on: ubuntu-latest
     steps:
       # 해당 레포지토리로 check-out 하여
@@ -30,17 +35,18 @@ jobs:
         run: yarn build
 
       - name: S3 Deploy
+        env:          
         # 현재 build된 폴더에 접근 후 s3 버킷인 soon-sample-deploy에 파일 업로드
         # --acl bucket-owner-full-control 이 뭔지 알아보기
         run: aws s3 sync ./build s3://soon-sample-deploy/ --acl bucket-owner-full-control
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
+        
         # 새로 리소스를 업데이트할 때 기존 캐시 무효화
       - name: Invalidate CloudFront Cache 
         uses: chetan/invalidate-cloudfront-action@master
         env:
-          AWS_DISTRIBUTION: ${{ secrets.AWS_DISTRIBUTION_ID }}
+          DISTRIBUTION: ${{ secrets.AWS_DISTRIBUTION_ID }}
           PATHS: '/index.html'
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
         continue-on-error: true
