--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,21 +13,21 @@ jobs:
   # Job 이름으로 , build라는 이름으로 Job이 표시된다.
   build:
     # Runner가 실행되는 환경을 정의하는 부분이다.
-    # github actions 의 컨테이너 이미지 OS 설정 시 Ubuntu 20.04 를 사용할 경우, 
-    # aws cli v2를 사용할 수 있고 
-    # Ubuntu 18.04 이하의 디스트로에서는 aws cli v1을 사용한다. 
-    # 그 이유는 공식 레포의 스크립트를 참고하면 확인할 수 있다. 
+    # github actions 의 컨테이너 이미지 OS 설정 시 Ubuntu 20.04 를 사용할 경우,
+    # aws cli v2를 사용할 수 있고
+    # Ubuntu 18.04 이하의 디스트로에서는 aws cli v1을 사용한다.
+    # 그 이유는 공식 레포의 스크립트를 참고하면 확인할 수 있다.
     # (https://github.com/actions/virtual-environments/blob/main/images/linux/scripts/installers/aws.sh)
     runs-on: ubuntu-latest
     steps:
       # 해당 레포지토리로 check-out 하여
-      # 레포지토리에 접근할 수 있는 Action을 불러온다.    
+      # 레포지토리에 접근할 수 있는 Action을 불러온다.
       - name: Checkout source code
-      # checkout@v2 는 node12 에서 실행하는 workflow이다.
-      # checkout@v3로 바꿔줘야 한다. (node 16)
-      # https://github.blog/changelog/2022-09-22-github-actions-all-actions-will-begin-running-on-node16-instead-of-node12/
-        uses: actions/checkout@v3 # workflow에서 액세스할 수 있도록 저장소를 체크아웃 
-      
+        # checkout@v2 는 node12 에서 실행하는 workflow이다.
+        # checkout@v3로 바꿔줘야 한다. (node 16)
+        # https://github.blog/changelog/2022-09-22-github-actions-all-actions-will-begin-running-on-node16-instead-of-node12/
+        uses: actions/checkout@v3 # workflow에서 액세스할 수 있도록 저장소를 체크아웃
+
       - name: Install dependencies
         run: yarn install
 
@@ -38,9 +38,12 @@ jobs:
         # 현재 build된 폴더에 접근 후 s3 버킷인 soon-sample-deploy에 파일 업로드
         # --acl bucket-owner-full-control 이 뭔지 알아보기
         run: aws s3 sync ./build s3://soon-sample-deploy/ --acl bucket-owner-full-control
-        
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
         # 새로 리소스를 업데이트할 때 기존 캐시 무효화
-      - name: Invalidate CloudFront Cache 
+      - name: Invalidate CloudFront Cache
         uses: chetan/invalidate-cloudfront-action@master
         env:
           DISTRIBUTION: ${{ secrets.AWS_DISTRIBUTION_ID }}
